# jni-utils

./: CMakeLists.txt  README.md
include/: jni_as.h  jni_class.h  jni_method.h  jni_utils.h
src/: jni_class.cpp  jni_method.cpp  jni_utils.cpp
